# FreeRDP-android

./: .project  AndroidManifest.xml
jni/: Android.mk  freerdp.c
jni/freerdp-1.0-nevo/: CMakeLists.txt  config.h.in
jni/freerdp-1.0-nevo/channels/: CMakeLists.txt
jni/freerdp-1.0-nevo/channels/rdpsnd/: CMakeLists.txt
jni/freerdp-1.0-nevo/channels/rdpsnd/AudioQueue/: CMakeLists.txt  rdpsnd_aq.c  rdpsnd_aq.h
jni/freerdp-1.0-nevo/client/: CMakeLists.txt
jni/freerdp-1.0-nevo/client/Android/: CMakeLists.txt  android_graphics.c  android_graphics.h  androidfreerdp.c  androidfreerdp.h
jni/freerdp-1.0-nevo/client/iOS/: CMakeLists.txt  ios_graphics.c  ios_graphics.h  iosfreerdp.c  iosfreerdp.h
jni/freerdp-1.0-nevo/cmake/: ConfigMobileOptions.cmake  Toolchain-Android.cmake  Toolchain-iOS-arm.cmake  Toolchain-iOS-i386.cmake
jni/freerdp-1.0-nevo/include/freerdp/: freerdp.h
jni/freerdp-1.0-nevo/include/freerdp/utils/: svc_plugin.h
jni/freerdp-1.0-nevo/ios-libs/openssl-0.9.8o/include/openssl/: opensslconf.h  opensslconf64.h  opensslconfarm.h
jni/freerdp-1.0-nevo/ios-libs/openssl-0.9.8o/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
jni/freerdp-1.0-nevo/libfreerdp-codec/: color.c
jni/freerdp-1.0-nevo/libfreerdp-utils/: CMakeLists.txt  args.c  file.c  load_plugin.c
jni/freerdp-1.0-nevo/server/test/: tfreerdp.c
jni/include/alsa/: global.h
jni/include/openssl/: opensslconf.h
jni/lib/: libasound.la  libavutil.so.49.15.0  libcrypto.so.0.9.8  libssl.so.0.9.8
res/values/: strings.xml
src/net/itskewpie/freerdp/: FreeRDPActivity.java
